<resources>
    <string name="app_name">Podcast Land</string>
    <string name="tvPrimary">Podcast Name</string>
    <string name="tvSecondary">Author</string>
    <string name="tvThird">Genre</string>
    <string name="tvFourth">Description</string>
    <string name="tvLink">Link</string>
    <string name="image">Image</string>
    <string name="Link1">Elon Musk podcast</string>
    <string name="Link2">Michio Kaku podcast</string>
    <string name="Link3">Dave Grohl podcast</string>
    <string name="Link4">Nogometni podcast</string>
    <string name="Linkk">Link</string>
</resources>